@@ -5,80 +5,71 @@
      metal:use-macro="api.community_layout.macros['master']">
 
   <div metal:fill-slot="content">
-
     <div metal:use-macro="api.snippets.macros['status_message']"/>
 
-    <h1 class="kscreentitle">${api.page_title}</h1>
+    <div class="chparent_wrapper">
+      <a id="backto" class="chparent" href="#">
+        <img width="15" height="15" alt="Up to" src="http://localhost:6543/static/r1257261457/images/arrow_up.jpg"/>
+        Back to Calendar
+      </a>
+    </div>
 
-  <form method="post" action="${post_url}" class="k3_genericForm"
+    <h1 class="kscreentitle" tal:condition="manifest">${api.page_title}</h1>
+
+  <form method="post" action="${post_url}" class="cal_add k3_genericForm"
         xml:id="contentform" enctype="multipart/form-data" name="save">
 
     <div metal:use-macro="formfields.macros['formerror']"/>
 
-    <table id="calendars" border="0">
-
-      <tr tal:condition="manifest">
-        <th>Color</th>
-        <th>Name</th>
-        <th>Location</th>
-        <th>Delete</th>
-      </tr>
-
+    <table id="calendars" class="cal_all" cellspacing="0" tal:condition="manifest">
       <tr tal:repeat="calendar manifest">
-         <td style="background-color: ${calendar['color']}">&nbsp;</td>
-         <td>${calendar['name']}</td>
-         <td>${calendar['title']}</td>
-         <td><a href="${post_url}?form.delete=${calendar['escaped_name']}"
-                >delete</a></td>
-       </tr>
+        <td class="color"><div class="cal_${calendar['color']}_all">&nbsp;</div></td>
+        <td class="name"><a href="#">${calendar['name']}</a></td>
+        <td class="location">${calendar['title']}</td>
+        <td class="actions"><a href="${post_url}?form.delete=${calendar['escaped_name']}">delete</a></td>
+      </tr>
+    </table>
 
-     </table>
 
-    <fieldset tal:define="error fielderrors['calendar_name']|None"
+    <h1>Add Calendar</h1>
+      
+    <fieldset tal:define="error fielderrors['calendar_path']|None"
               class="${error and 'fieldError' or ''}"
               id="virtual-calendars-field">
-
-      <h2>Add Calendar</h2>
-
-      <div tal:condition="error" class="errorMessage">${error}</div> 
-
-      <label for="calendar_path" class="required">
-        Calendar Location
-      </label>
-      <select name="calendar_path">
+      <label for="calendar_path" class="required">Calendar Location</label><br />
+      <select name="calendar_path" id="calendar_path">
         <option value="">Local</option>
         <option tal:repeat="calendar remote_calendars"
                 value="${calendar['path']}">${calendar['title']}</option>
       </select>
-      <br/>
+    </fieldset>
 
-      <label for="calendar_name" class="required">
-        Name the calendar
-      </label>
-      <input name="calendar_name" type="text"/>
+    <fieldset tal:define="error fielderrors['calendar_name']|None"
+              class="${error and 'fieldError' or ''}"
+              id="virtual-calendars-field">
+      <label for="calendar_name" class="required">Name the calendar</label><br />
+      <div tal:condition="error" class="errorMessage">${error}</div> 
+      <input name="calendar_name" id="calendar_name" type="text"/>
+    </fieldset>
 
-      <br/>
+    <fieldset tal:define="error fielderrors['calendar_color']|None"
+              class="${error and 'fieldError' or ''}"
+              id="virtual-calendars-field">
+      <label for="calendar_color" class="required">Choose color</label><br />
+      <div tal:condition="error" class="errorMessage">${error}</div> 
 
-      <label for="calendar_color" class="required">
-        Choose color
-      </label>
-
-      <table border="0">
-
-        <tr>
-          <td tal:repeat="color colors">
+      <ul class="cal_choose_color">
+        <li tal:repeat="color colors">
             <input name="calendar_color"
                    type="radio" value="${color}" alt="${color}"/>
             <br/>
-            <div style="background-color: ${color}">&nbsp;</div>
-          </td>
-        </tr>
-      </table>
+            <div class="cal_${color}_all">&nbsp;</div>
+        </li>
+      </ul>
 
     </fieldset>
 
     <fieldset metal:use-macro="formfields.macros['form-submit']"/>
-
   </form>
 
   </div>
